---------------------------------------------------------------------------
Version 3.12.0 (rgerhards), 2008-02-??
---------------------------------------------------------------------------
Version 3.11.5 (rgerhards), 2008-02-25
- new imgssapi module, changed imtcp module - this enables to load/package
  GSSAPI support separately - thanks to varmojfekoj for the patch
- compatibility mode (the -c option series) is now at least partly
  completed - thanks to varmojfekoj for the patch
- documentation for imgssapi and imtcp added
- duplicate $ModLoad's for the same module are now detected and
  rejected -- thanks to varmojfekoj for the patch
---------------------------------------------------------------------------
Version 3.11.4 (rgerhards), 2008-02-21
- bugfix: debug.html was missing from release tarball - thanks to Michael
  Biebl for bringing this to my attention
- some internal cleanup on the stringbuf object calling interface
- general code cleanup and further modularization
- $MainMessageQueueDiscardSeverity can now also handle textual severities
  (previously only integers)
- bugfix: message object was not properly synchronized when the 
  main queue had a single thread and non-direct action queues were used
- some documentation improvements
---------------------------------------------------------------------------
Version 3.11.3 (rgerhards), 2008-02-18
- fixed a bug in imklog which lead to duplicate message content in
  kernel logs
- added support for better plugin handling in libdbi (we contributed
  a patch to do that, we just now need to wait for the next libdbi
  version)
- bugfix: fixed abort when invalid template was provided to an action
  bug http://bugzilla.adiscon.com/show_bug.cgi?id=4
- re-instantiated SIGUSR1 function; added SIGUSR2 to generate debug
  status output
- added some documentation on runtime-debug settings
- slightly improved man pages for novice users
---------------------------------------------------------------------------