@@ -5,7 +5,7 @@
 <h1>rsyslog vs. syslog-ng</h1>
 <p><small><i>Written by <a href="http://www.gerhards.net/rainer">Rainer Gerhards</a>
 (2008-02-15)</i></small></p>
-<p>We have often been asked abut a comparison sheet between
+<p>We have often been asked about a comparison sheet between
 rsyslog and syslog-ng. Unfortunately, I do not know much about
 syslog-ng, I did not even use it once. Also, there seems to be no
 comprehensive feature sheet available for syslog-ng (that recently changed, see 
