@@ -1,4 +1,7 @@
-pkglib_LTLIBRARIES = imtcp.la imgssapi.la
+pkglib_LTLIBRARIES = imtcp.la
+if ENABLE_GSSAPI
+pkglib_LTLIBRARIES += imgssapi.la
+endif
 
 imtcp_la_SOURCES = imtcp.c
 imtcp_la_CPPFLAGS = -DFORCE_NO_GSS=1 -I$(top_srcdir) $(pthreads_cflags) $(mudflap_cflags)
@@ -7,4 +10,4 @@ imtcp_la_LDFLAGS = $(mudflap_libs) -module -avoid-version
 imgssapi_la_SOURCES = imtcp.c
 imgssapi_la_CPPFLAGS = -I$(top_srcdir) $(pthreads_cflags) $(mudflap_cflags)
 imgssapi_la_LDFLAGS = $(mudflap_libs) -module -avoid-version
-imgssapi_la_LIBADD = $(gss_libs)
+imgssapi_la_LIBADD = $(gss_libs) $(top_builddir)/libgssapi-misc.la
